--- a/templates/home.html
+++ b/templates/home.html
@@ -3,45 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Careers</title>
-    <style>
-      h1{
-        font-size: 40px;
-        font-family: Roboto;
-        color: rgb(100,100,100);
-        text-align: center;
-      }
-      #banner{
-        width: 100%;
-        height: 360px;
-        object-fit: cover; 
-      }
-      h2{
-        
-      }
-      .body-text{
-        font-family: Roboto;
-        color: rgb(100, 100, 100);
-        
-      }
-      #container{
-        max-width: 720px;
-        margin:0 auto; 
-      }
-    </style>
   </head>
   <body>
-    <div id="container">  <h1>Career page</h1>
-    <img id="banner" src="static/banner.jpg", width=500px, height=320px>
-    
-    <h1>About Us</h1>
-    <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet suspendisse interdum consectetur libero. Ipsum consequat nisl vel pretium lectus quam id leo. Molestie nunc non blandit massa. Ullamcorper sit amet risus nullam eget felis eget nunc. Vel facilisis volutpat est velit. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Lectus nulla at volutpat diam. Enim diam vulputate ut pharetra sit. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Aliquet nibh praesent tristique magna sit amet purus. In mollis nunc sed id semper risus. At in tellus integer feugiat scelerisque varius morbi enim. Nisi lacus sed viverra tellus. Odio ut sem nulla pharetra diam sit. Egestas congue quisque egestas diam in arcu cursus euismod.</p>
-    <h2>Open Positons</h2>
-    <p class="body-text">To-do: show jobs here</p>
-    <div style="text-align: center;">
-      <button>Contact Us</button>
-      <p>Copyright David Garcia</p>
+    <div class="container"> 
+    <h1 class="text-center">Career page</h1>
+    <img class="img-fluid" src="static/banner.jpg">
+    <h1 class="text-center mt-2">About Us</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet suspendisse interdum consectetur libero. Ipsum consequat nisl vel pretium lectus quam id leo. Molestie nunc non blandit massa. Ullamcorper sit amet risus nullam eget felis eget nunc. Vel facilisis volutpat est velit. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Lectus nulla at volutpat diam. Enim diam vulputate ut pharetra sit. </p>
+    <h2 class="text-center mt-2 mb-4">Open Positons</h2>
+<div>
+      <div>
+      {% for job in jobs %}
+        {% include 'jobitem.html' %}
+      {% endfor %}
+      </div>
     </div>
+    <div class="text-center">
+      <button class="btn btn-primary btn-lg">Contact Us</button>
     </div>
   </body>
   
