Added a footer, header, and a navbar

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
     <title>Careers</title>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container"> 
     <h1 class="text-center">Career page</h1>
     <img class="img-fluid" src="static/banner.jpg">
