--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,6 +11,6 @@
      {% endif %}
 </div>
 <div class="col-3">
-  <button type="button" class="btn btn-outline-primary">Apply</button>
+  <a href="mailto:dmg89807@gmail.com?subject=Job%20application%20For%20{{job['title']}}&body=My%20Name%3A%20%3Center%20your%20name%20here%3E%0D%0A%0D%0AMy%20Resume%3A%20%3Center%20resume%20here%3E%0D%0A%0D%0AMy%20LinkedIn%20Link%3A%20%3Center%20Linkedin%20link%20here%3E" type="button" class="btn btn-outline-primary">Apply</a>
 </div>
 </div>
